Создано с помощью Colaboratory

--- a/2023_TextAI_Numpy.ipynb
+++ b/2023_TextAI_Numpy.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Mbw7idUFdwpu"
       },
@@ -34,15 +34,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "f0cJuN6Ydwpw",
-        "outputId": "a6c6abbe-19a5-4647-ccfa-33cf6f6d5fa6"
+        "outputId": "a6ddf4c3-6844-4e11-8f2b-f8686852ba46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[1 2 3 4] int64\n",
             "[1. 2. 3. 4.] float64\n",
@@ -64,15 +67,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "i8WEkiZxdwpz",
-        "outputId": "1378b5b0-21f0-4d03-e664-125234e6ba11"
+        "outputId": "37976b4d-dcfa-47a3-b92a-419af5d15356",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[0 0 0 0 0 0 0 0 0 0]\n",
             "[[1. 1.]\n",
@@ -97,25 +103,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "ewEPkGeldwp0",
-        "outputId": "5b390ede-bf56-4e72-da10-db1b3761ce3b"
+        "outputId": "da88221e-a140-42f9-90d6-25694637e173",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[[0.88084127 0.75102805 0.22016303]\n",
-            " [0.86356211 0.17794245 0.28205565]\n",
-            " [0.31658814 0.13600925 0.17463009]]\n",
-            "[[ 0.68011257  1.44030106 -1.28953134]\n",
-            " [ 1.12241345  0.4392603   1.4328979 ]\n",
-            " [ 0.02459939  0.64819462  0.55478418]]\n",
-            "[[2 3 4]\n",
-            " [3 3 5]\n",
-            " [7 4 2]]\n"
+            "[[0.56744043 0.37147128 0.07825765]\n",
+            " [0.99374918 0.22392408 0.14157179]\n",
+            " [0.26083496 0.97034628 0.48699047]]\n",
+            "[[-2.73903013  0.37952925  0.95313143]\n",
+            " [ 0.49562879  0.88928708 -0.73662019]\n",
+            " [-2.74134052  1.01629186  0.85526011]]\n",
+            "[[9 5 5]\n",
+            " [3 4 0]\n",
+            " [8 0 6]]\n"
           ]
         }
       ],
@@ -1238,7 +1247,7 @@
         "id": "cCnMSZ-ydwqh"
       },
       "source": [
-        "![Заключительная картинка](end-image.png)"
+        "![Заключительная картинка](https://github.com/AlekseyBuzmakov/2023-TextAI/blob/main/end-image.png?raw=1)"
       ]
     }
   ],
